# hellob

./: esp_use_info.txt  freertos_api.h
hello_world/lc_proj/: lc_proj_info.txt  uuidMap.json
hello_world/lc_proj/ble_car_0.1/: PCB_ble_car_0.1.json  ble_car_0.1.json  info
hello_world/lc_proj/ble_car_cent_01/: PCB_ble_car_cent_0.1.json  ble_car_cent_01.json  info
hello_world/main/: CMakeLists.txt  ble_at_cmd.c  ble_at_cmd.h  freertos_study.c  freertos_study.h  gattc_demo.c  gatts_demo.c  hello_world_main.c  hello_world_main.h  i2c_example_main.c  i2c_example_main.h  i2c_protocol.c  i2c_protocol.h  mcpwm_brushed_dc_control_example.c  mcpwm_dc_control.c  mpu_6050.c  mpu_6050.h  ps2_i2c_sensor.c  ps2_i2c_sensor.h  uart_events_example_main.c  user_cmd.c  user_cmd.h
hello_world/main/motor_control/: dc_motor.c  dc_motor.h
hello_world/main/mpu6050/: mpu_6050.c  mpu_6050.h
mpu_6050/: hepingood_mpu6050.c  mpu_6050_sensor.c  mpu_6050_sensor.h  readme.txt  record_mpu6050.txt
mpu_6050/DMP/: inv_mpu.h
mpu_6050/IIC/: IOI2C.c  IOI2C.h
mpu_6050/MPU6050/: MPU6050.c  mpu6050.h
mpu_6050/hepin_mpu6050/example/: driver_mpu6050_basic.c  driver_mpu6050_dmp.c
mpu_6050/hepin_mpu6050/interface/: driver_mpu6050_interface_template.c
mpu_6050/hepin_mpu6050/src/: driver_mpu6050.c
mpu_6050/xiaobai-mpu6050/: readme.txt
mpu_6050/xiaobai-mpu6050/DMP/: inv_mpu.c
mpu_6050/xiaobai-mpu6050/IIC/: IOI2C.h
mpu_6050/xiaobai-mpu6050/MPU6050/: MPU6050.c
protocol/i2c/: i2c_protocol.c  i2c_protocol.h
