idf_component_register(SRCS "hello_world_main.c"
                        "gatts_demo.c"
                        "gattc_demo.c"
                        "uart_events_example_main.c"
                        "user_cmd.c"
                        "mcpwm_brushed_dc_control_example.c"
                        "i2c_example_main.c"
                    INCLUDE_DIRS "")
