idf_component_register(SRCS "hello_world_main.c"
                        "gatts_demo.c"
                        "gattc_demo.c"
                        "uart_events_example_main.c"
                        "user_cmd.c"
                        "mcpwm_dc_control.c"
                        "i2c_example_main.c"
                        "mpu6050/mpu_6050.c"
                        "motor_control/dc_motor.c"
                        "i2c_protocol.c"
                        "ps2_i2c_sensor.c"
                        "freertos_study.c"
                        "ble_at_cmd.c"
                    INCLUDE_DIRS "."
                    "mpu6050/"
                    "motor_control/"
                    )
